# glassbox

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  rig-nightly.yml
docs/design/: architecture_boundaries.md  code_health_roadmap.md  computer_use_success_rate.md  config_preset_layer.md  glassbox_a11y_channels.md  glassbox_evaluation_layers.md  ipad_mini_migration.md  ipad_settings_state_machine.md  iphone_settings_transition.md  locale_seam_english_first.md  log_sim_replay_regression.md  ocr_temporal_voting.md  phone_orchestrator_decomposition.md  public_api.md  recognition_to_action_pipeline.md  screen_memory.md  screen_state_fsm.md  settings_detail_false_positive_arbitration.md  utg_operable_sim.md
docs/goals/: computer_use_honest_gate_first.md  computer_use_quality_rig_validation.md  computer_use_quality_roadmap.md  computer_use_world_model_spine.md  flag_cell_ab_matrix.md  inert_row_detection.md  ipad_settings_l1_rig_ab_handoff.md  kimi_1d_point_grounding.md  locale_seam_remaining.md  navback_clock_misclassification.md  ocr_max_out_vision_levers.md  project_health_snapshot.md  scene_detail_misclassification.md  scroll_overshoot_efficiency.md  text_detector_dbnet_craft.md  ui_element_layout_segmentation.md  unwired_logic_audit.md
docs/measurements/: ocr_temporal_en_correction_ab_2026_06_01.md  ocr_temporal_home_spike_2026_06_01.md  voice_control_matcher_gaps_handoff_2026_06_10.md  voice_control_overlay_ipad_mini_2026_06_04.md
docs/reference/: ai_native_author_mode.md  computer_use_evaluation_landscape.md  ios_assistive_touch_primitives.json  ios_assistive_touch_primitives.md  ios_full_keyboard_access_commands.md  picokvm_ipad_wheel.md  rig_device_profiles.md
glassbox/: __init__.py  action_runner.py  ai.py  ai_session.py  app_policies.py  assistive_touch_driver.py  backend_registry.py  boundaries.py  config.py  coordinate_mapper.py  crawl_policies.py  effector.py  element_selector.py  geometry.py  gesture_executor.py  locale.py  perceptor.py  phone.py  platforms.py  profile.py  runtime.py  system_navigator.py  target_planner.py  text_input.py
glassbox/action/: __init__.py  actuation.py  actuation_profile.py  calibration.py  context.py  orchestrator.py  policy.py  recovery.py  seeds.py  semantic_plan.py  semantics.py  stuck.py
glassbox/cognition/: __init__.py  asset_match.py  base.py  candidates.py  coldstart.py  contracts.py  heuristic.py  icon_contract.py  icon_detect.py  label_prior.py  layout_segment.py  ocr.py  ocr_contract.py  ocr_tiling.py  ocr_vision.py  ocr_vote.py  som.py  text_detector.py  text_match.py  vlm_gate.py  vlm_kimi.py  vlm_ocr.py  voice_control_overlay.py  whitebox.py
glassbox/crawl/: __init__.py  policy.py  trace.py
glassbox/demo/: list_devices.py  show_screen.py
glassbox/effectors/: __init__.py
glassbox/ios/: __init__.py  _scene_common.py  app_aliases.py  app_store.py  assistive_touch.py  crawl.py  default_apps.py  gauntlet.py  progress.py  recovery.py  safe_area.py  scene.py  settings_rows.py  springboard.py  springboard_map.py  weather_surface.py
glassbox/ipados/: __init__.py  scene.py
glassbox/mcp/: __init__.py  server.py
glassbox/memory/: __init__.py  element_key.py  graph.py  recording.py  schema.py  signature.py  store.py
glassbox/obs/: __init__.py  artifacts.py  kimi_cache.py  recorder.py  replay.py  stream.py  vlm_cache.py
glassbox/perception/: __init__.py  app_viewport.py  device.py  letterbox.py  picokvm_config.py  picokvm_proxy.py  picokvm_source.py  recording_source.py  replay_assert.py  source.py  stable.py  static.py
glassbox/verification/: __init__.py  diff.py  golden.py  probe_ingest.py  registry.py  verifiers.py
scripts/: new-worktree.sh
skills/: conftest.py
skills/crawl/: crawl_app.py  run.py
skills/regression/: canonical_primitives.py  clock_tabs.py  computer_use_success_rate.py  extract_transition_corpus.py  floor_lineage.py  golden_ingest.py  human_baseline.py  machinery_probe.py  ocr_postprocess_spike.py  ocr_temporal_spike.py  ocr_vision_levers_spike.py  packaging_probe.py  replay_settings_mint_flips.py  scrub.py  ui_layout_segmentation_spike.py  verifier_alignment.py  voice_control_overlay_labeled_replay.py  voice_control_overlay_probe.py
skills/smoke/: ios_settings_walkthrough_support.py  test_action_semantics.py  test_actuation_feedback.py  test_ai_native_interface.py  test_ai_native_mcp.py  test_ai_session.py  test_app_viewport.py  test_architecture_boundaries.py  test_calibration_probe.py  test_candidates.py  test_canonical_floor.py  test_canonical_primitives.py  test_clock_tabs.py  test_clock_tabs_floor.py  test_coldstart.py  test_computer_use_runtime.py  (+102 more)
(+163 files in other folders)
